# kolect

./: .ai-directives.md  .editorconfig  README.md  biome.json  dataset.validation.test.ts  index.html  lefthook.yml  package.json  schema.sql  task.md  todo.md  tsconfig.json  vite.config.ts
src-tauri/: .env  .env.production  Cargo.toml  config.toml  diesel.toml  tauri.android.conf.json  tauri.conf.json
src-tauri/.cargo/: audit.toml
src-tauri/capabilities/: default.json
src-tauri/config/: dev.json
src-tauri/migrations/2026-02-24-154551-0000_create_groups/: up.sql
src-tauri/migrations/2026-02-24-154555-0000_create_albums/: up.sql
src-tauri/migrations/2026-02-24-154559-0000_create_lightsticks/: down.sql  up.sql
src-tauri/migrations/2026-03-02-145256-0000_create_groups/: up.sql
src-tauri/migrations/2026-03-02-145823-0000_create_collectibles/: down.sql  up.sql
src-tauri/migrations/2026-03-17-002354-0000_agency/: down.sql  up.sql
src-tauri/migrations/2026-03-17-002400-0000_groups/: down.sql  up.sql
src-tauri/migrations/2026-03-17-002406-0000_artists/: down.sql  up.sql
src-tauri/migrations/2026-03-17-002417-0000_artist_aliases/: down.sql  up.sql
src-tauri/migrations/2026-03-17-002430-0000_group_members/: down.sql  up.sql
src-tauri/migrations/2026-03-17-002440-0000_albums/: down.sql  up.sql
src-tauri/migrations/2026-03-17-002451-0000_album_versions/: down.sql  up.sql
src-tauri/migrations/2026-03-17-002505-0000_digipacks/: down.sql  up.sql
src-tauri/src/: config.rs  dataset.rs  db.rs  lib.rs  main.rs  schema.rs
src-tauri/src/commands/: agency.rs  (+10 more)
(+265 files in other folders)
