[package]
name = "kolect"
version = "0.1.0"
description = "A Tauri App"
authors = ["Sukaato"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "kolect_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.10.3", features = [] }
tauri-plugin-opener = "2.5.3"
tauri-plugin-fs = "2.4.5"
tauri-plugin-store = "2.4.2"
tauri-plugin-log = "2.8.0"
tauri-plugin-os = "2.3.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
rusqlite = { version = "0.29", features = ["bundled"] }
reqwest = { version = "0.13.2", default-features = false, features = ["json", "default-tls"] }
tokio = { version = "1.50.0", features = ["full"] }
chrono = { version = "0.4.44", features = ["serde"] }
semver = { version = "1.0.27", default-features = false, features = ["serde"] }
diesel = { version = "2.3.7", features = ["chrono", "returning_clauses_for_sqlite_3_35", "sqlite"] }
diesel_migrations = { version = "2.3.1", features = ["sqlite"] }
thiserror = "2.0.18"
uuid = { version = "1.22.0", features = ["v4", "serde"] }
